--- a/index.html
+++ b/index.html
@@ -6,12 +6,17 @@
 
 <body>
 
-<p>Aquí seguir los enlaces a los respectivos informes</p>
+<p>Seguir los enlaces a los respectivos informes de cada juzgado de ejecución de penas de Barranquilla</p>
 
 
-<p><a href="InformesPPLJuzgEspecifico.html">Informe Juzgado primero</a></p>
+<p><a href="InformesPPLJuzgEspecifico1.html">Informe Juzgado primero</a></p>
 
 <p><a href="InformesPPLJuzgEspecifico2.html">Informe Juzgado segundo</a></p>
+<p><a href="InformesPPLJuzgEspecifico3.html">Informe Juzgado tercero</a></p>
+<p><a href="InformesPPLJuzgEspecifico4.html">Informe Juzgado cuarto</a></p> 
+<p><a href="InformesPPLJuzgEspecifico5.html">Informe Juzgado quinto</a></p>
+<p><a href="InformesPPLJuzgEspecifico6.html">Informe Juzgado sexto</a></p>
+  
 
 </body>
 </html>
