--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@ ul.task-list li input[type="checkbox"] {
 
 <header id="title-block-header" class="quarto-title-block default">
 <div class="quarto-title">
-<h1 class="title">Informes Csj Epms</h1>
+<h1 class="title">INFORMES CSJ EPMS</h1>
 </div>
 
 
